tests/toy/neg/001859_mutation.toylang
program 0 a = { } .
